Refactor Code, Add Helper, Add Middleware
