# cmd/simpleshop/docs/swagger.json
@@ -25,12 +25,46 @@
                 }
             }
         },
-        "/hello": {
+        "/hello/": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Our Favorite words",
+                "summary": "Get Our Favorite words",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Hello"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Save Our Favorite words",
+                "parameters": [
+                    {
+                        "description": "Your Own Hello Word",
+                        "name": "m",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Your Own Hello Word Signature",
+                        "name": "o",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -62,6 +96,10 @@
                 "d": {
                     "type": "string",
                     "example": "Hello World !!!"
+                },
+                "o": {
+                    "type": "string",
+                    "example": "Default"
                 },
                 "s": {
                     "type": "integer",
